# Deep-Researcher-v2

./: .gitignore  CONTRIBUTING.md  Implementation.md  README.md
backend/: .gitignore  API.md  main.py  migrations.py  pyproject.toml  server.py
backend/idea/: Ideas.md  OLLAMA.MODELS  UTIL.PORTS  architecture.excalidraw
backend/main/apis/bucket/: bucket_urls.py
backend/main/apis/chats/: chat_urls.py
backend/main/apis/history/: history_urls.py
backend/main/apis/models/: workspaces.py
backend/main/apis/reasearch/: research_urls.py
backend/main/apis/workspace/: workspace_urls.py
backend/main/secrets/: DRSecrets.py
backend/main/src/: README.md  apis.py
backend/main/src/bucket/: bucket_orchestrator.py  bucket_store.py
backend/main/src/chat/: README.md  chat_orchestrator.py
backend/main/src/history/: history_orchestrator.py
backend/main/src/llms/gemini/: README.md
backend/main/src/llms/ollama/: DROllamaWrapper.py  README.md
backend/main/src/research/: README.md  artifact_generator.py  db_queue.py  external_services.py  gemini_client.py  models.py  orchestrator.py  planner.py  question_asker.py  redis_manager.py  research_api_orchestrator.py
backend/main/src/store/: DBManager.py  DBVector.py  README.md
backend/main/src/store/bucket/: README.md  (+1 more)
backend/main/src/tools/: README.md
backend/main/src/utils/: DRLogger.py  README.md  utilities.py  versionManagement.py  version_constants.py
backend/main/src/workspace/: workspace_orchestrator.py
backend/main/sse/: event_bus.py
backend/tests/: DBvector_test.py  OllamaTest.py  test_youtube_stress.py
(+114 files in other folders)
