[project]
name = "deep-researcher-backend"
version = "2.0.0"
description = "This is an Backend for Deep Researcher, a research assistant that helps you to find relevant papers and summarize them."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "google-genai>=1.65.0",
    "numpy<2",
    "ollama>=0.6.1",
    "onnxruntime==1.18.0",
    "pillow>=12.1.1",
    "pillow-avif-plugin>=1.5.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "uvicorn>=0.41.0",
]
